--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<body>
+
 <header>>ALURAFLIX</header>
 
 
@@ -7,3 +9,4 @@
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/bshSKj33o70?si=MuwXHpUlGvIztEse" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
+</body>
