--- a/index.html
+++ b/index.html
@@ -1,17 +1,32 @@
+<html>
+
 <head>
     <link rel="stylesheet" href="style.css" />
+    <title>isabelli</title>
 </head>
 
 <body>
 
-<header>>ALURAFLIX</header>
+    <header>>ALURAFLIX</header>
 
+    <section>
 
-</h1> Mushu melhores momentos.</h1>
-<p>#MulanMulan</p>
+        <div>
+            </h1> Mushu melhores momentos.</h1>
+            <p>#MulanMulan</p>
+        </div>
 
+        <div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/bshSKj33o70?si=udI0faP-cmBjbKDG"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/bshSKj33o70?si=MuwXHpUlGvIztEse" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+
+    </section>
+
 
 </body>
 
+</html>
